--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
   - sudo apt-get install -y libzmq-dev libxrandr-dev libxinerama-dev  libxinerama1 libx11-dev libxcursor-dev libxi-dev xorg-dev libglu1-mesa-dev freeglut3-dev mesa-common-dev
   - git clone https://github.com/glfw/glfw && mkdir build && cd build && cmake ../glfw && make -j4 && sudo make install
 install:
+  - go get github.com/pebbe/zmq4
   - go get github.com/donomii/throff
   - go build github.com/donomii/throff
 script:
